Add simd approach for summing the cached PQ query factors of each encoded vector.  Remove some more collections.  Add memory size of PQ and compressed vectors